Enable a custom class attibute per carousel

--- a/assets/carousel.twig
+++ b/assets/carousel.twig
@@ -1,5 +1,5 @@
 
-<div id="carousel-{{ name }}" class="carousel slide" data-ride="carousel" {{ dataoptions }}>
+<div id="carousel-{{ name }}" class="carousel slide {{ class }}" data-ride="carousel" {{ dataoptions }}>
     {# Indicators #}
     <ol class="carousel-indicators">
         {% for image in images %}
